--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ tqdm = "^4.64.0"
 astropy = "^5.1"
 planobs = "^0.5.1"
 scipy = "^1.9.0"
+backoff = "^2.1.2"
+requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
 coveralls = "^3.3.1"
