--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ planobs = "^0.5.1"
 scipy = "^1.9.0"
 backoff = "^2.1.2"
 requests = "^2.28.1"
+pymongo = "^4.2.0"
 
 [tool.poetry.dev-dependencies]
 coveralls = "^3.3.1"
