--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ scipy = "^1.9.0"
 backoff = "^2.1.2"
 requests = "^2.28.1"
 pymongo = "^4.2.0"
+matplotlib = "^3.5.3"
 
 [tool.poetry.dev-dependencies]
 coveralls = "^3.3.1"
