--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ matplotlib = "^3.5.3"
 pyarrow = "^9.0.0"
 fastparquet = "^0.8.1"
 extcats = "^2.4.3"
+timewise = "^0.1.10"
 
 [tool.poetry.dev-dependencies]
 coveralls = "^3.3.1"
