--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ timewise = "^0.1.10"
 Flask = "^2.2.2"
 Flask-Login = "^0.6.2"
 Flask-WTF = "^1.0.1"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 coveralls = "^3.3.1"
