--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ Flask = "^2.2.2"
 Flask-Login = "^0.6.2"
 Flask-WTF = "^1.0.1"
 gunicorn = "^20.1.0"
+flask-mongoengine = "^1.0.0"
+Flask-PyMongo = "^2.3.0"
 
 [tool.poetry.dev-dependencies]
 coveralls = "^3.3.1"
