--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ Flask-WTF = "^1.0.1"
 gunicorn = "^20.1.0"
 flask-mongoengine = "^1.0.0"
 Flask-PyMongo = "^2.3.0"
+ztfquery = "^1.19.1"
 
 [tool.poetry.dev-dependencies]
 coveralls = "^3.3.1"
