--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ gunicorn = "^20.1.0"
 flask-mongoengine = "^1.0.0"
 Flask-PyMongo = "^2.3.0"
 ztfquery = "^1.19.1"
+lmfit = "^1.0.3"
 
 [tool.poetry.dev-dependencies]
 coveralls = "^3.3.1"
