--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ flask-mongoengine = "^1.0.0"
 Flask-PyMongo = "^2.3.0"
 ztfquery = "^1.19.1"
 lmfit = "^1.0.3"
+sncosmo = "^2.9.0"
+sfdmap = "^0.1.1"
 
 [tool.poetry.dev-dependencies]
 coveralls = "^3.3.1"
