--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ ztfquery = "^1.19.1"
 lmfit = "^1.0.3"
 sncosmo = "^2.9.0"
 sfdmap = "^0.1.1"
+iminuit = "^2.17.0"
 
 [tool.poetry.dev-dependencies]
 coveralls = "^3.3.1"
