--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ sncosmo = "^2.9.0"
 sfdmap = "^0.1.1"
 iminuit = "^2.17.0"
 seaborn = "^0.12.1"
+mypy = "^0.991"
 
 [tool.poetry.dev-dependencies]
 coveralls = "^3.3.1"
