--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ sfdmap = "^0.1.1"
 iminuit = "^2.17.0"
 seaborn = "^0.12.1"
 mypy = "^0.991"
+keyring = "^23.13.1"
 
 [tool.poetry.dev-dependencies]
 coveralls = "^3.3.1"
