--- a/config.yaml
+++ b/config.yaml
@@ -123,13 +123,22 @@ cutlabels:
   wise_noagn: remove AGN (based on WISE colors)
   wise_keepagn: retain only AGN (based on WISE colors)
   bayes: "exactly 1 flare"
-  nocut: "no cuts applied (only bogus and TDE fit success)"
+  nocut: "no cuts applied (only bogus veto and TDE fit success)"
   snia: "rise/decay based Ia cut"
-  chisq: "chisq. cut (TDE < SALT)"
-  risedecay: "TDE-fit rise & decay time"
-  coredist: "core distance <= 0.4 arcsec"
+  chisq: "chisq. cut (TDE $<$ SALT)"
+  risedecay: "TDE-fit rise and decay time"
+  coredist: "core distance $<=$ 0.4 arcsec"
   milliquas_noagn: "remove AGN (based on Milliquas match)"
   milliquas_keepagn: "retain only AGN (based on Milliquas match)"
+
+classlabels:
+  all: All classifications
+  snia: SN Ia
+  tde: TDE
+  agn_star: AGN/star
+  sn_other: SN (no Ia)
+  unclass: Unclass.
+  other: Other
 
 
 fritz_queries:
@@ -165,7 +174,8 @@ selections: &id001
   gold_risedecay: "0.9<rise<2.5 and 1.5<decay<3.8 "
   flaring_risedecay: "1.4<decay<4 and 0.8<rise<2.5 "
   flaring: "ztfid in @flaring_ztfids "
-  coredist: "distnr_distnr <= 0.4"
+  coredist: "distnr_distnr <= 0.4 "
+  sgscore: "crossmatch_sgscore_sgscore < 0.4 "
 
     # # that's the one for dtemp = 15k, evolution from peak, bolcorr
     # tde_selection_finetuned = "temp > 3.93 and temp < 4.38 and d_temp>-90 and d_temp < 140 and rise>0.85 and rise<2.05 and decay>1.1 and decay<3 and red_chisq<6 and red_chisq < salt_red_chisq"
@@ -209,6 +219,8 @@ cuts:
     - wise_in_box
   goldwise:
     - gold_wise
+  sgscore:
+    - sgscore
   flaringwise:
     - flaring_wise
   snia:
@@ -244,16 +256,24 @@ classes:
   other: "classif == 'other' "
   agn_star: "classif == 'other' "
 
+colordict:
+  unclass: "#5799c7"
+  other: "#ff9f4a"
+  snia: "#61b861"
+  tde: "#e15d5e"
+  sn_other: "#af8dce"
+  agn_star: "#a98078"
+
 pl_props:
     unclass: 
-      m: .
-      s: 1
+      m: +
+      s: 11
       c: blue
-      a: 0.7
-      l: unclass.
+      a: 1 
+      l: Unclass.
       order: 1
     snia:
-      m: .
+      m: x
       s: 8
       c: green
       a: 1
@@ -264,7 +284,7 @@ pl_props:
       s: 8
       c: orange
       a: 1
-      l: SN other
+      l: SN (no Ia)
       order: 3
     tde:
       m: '*'
@@ -285,12 +305,12 @@ pl_props:
       s: 8
       c: brown
       a: 1
-      l: other
+      l: Other
       order: 3
     agn_star:
       m: .
       s: 8
       c: black
       a: 1
-      l: AGN/star
+      l: AGN/Star
       order: 4
