--- a/config.yaml
+++ b/config.yaml
@@ -150,7 +150,7 @@ fritz_queries:
     tde: fritz_class in @config['fritz_tde']
 
 selections: &id001
-  all: "rise > -1e99 " # fake cut, no empty df.query is allowed
+  all: "rise > -1e99 or rise.isnull()" # fake cut, no empty df.query is allowed
   # boundary: "rise>0.1 and rise < 3 and decay > 0.1 and decay<4 and wise_w2w3 < 900 and wise_w1w2 < 900 and red_chisq < 1000 and salt_red_chisq < 600 "
   boundary: "rise>0.1 and rise < 3 and decay > 0.1 and decay<4 "
   bogus: "fritz_class not in @config['bogus'] and fritz_class not in @config['unclass'] "
