--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ backoff = "^2.1.2"
 requests = "^2.28.1"
 pymongo = "^4.2.0"
 matplotlib = "^3.5.3"
-pyarrow = "^9.0.0"
+pyarrow = "^11.0.0"
 fastparquet = "^0.8.1"
 extcats = "^2.4.3"
 timewise = "^0.1.10"
@@ -30,7 +30,7 @@ Flask-PyMongo = "^2.3.0"
 ztfquery = "^1.19.1"
 lmfit = "^1.0.3"
 sncosmo = "^2.9.0"
-sfdmap = "^0.1.1"
+sfdmap = {git="https://github.com/robertdstein/sfdmap.git", branch = "intalias"}
 iminuit = "^2.17.0"
 seaborn = "^0.12.1"
 mypy = "^0.991"
