start to add distnr-redshift dependency (and conversion)

--- a/config.yaml
+++ b/config.yaml
@@ -376,6 +376,8 @@ train_params:
   - salt_paramdict_c
   - salt_paramdict_mwebv
   - salt_red_chisq
+  - wise_w1w2
+  - wise_w2w3
 
 train_params_train:
   - RA
@@ -412,6 +414,8 @@ train_params_train:
   - salt_paramdict_c
   - salt_paramdict_mwebv
   - salt_red_chisq
+  - wise_w1w2
+  - wise_w2w3
 
 
 
