fix isort, remove t0 from training data, noisify wise colors

--- a/config.yaml
+++ b/config.yaml
@@ -385,14 +385,12 @@ train_params_train:
   - tde_fit_exp_chisq
   - tde_fit_exp_ndof
   - tde_fit_exp_covariance
-  - tde_fit_exp_errors_t0
   - tde_fit_exp_errors_risetime
   - tde_fit_exp_errors_decaytime
   - tde_fit_exp_errors_temperature
   - tde_fit_exp_errors_amplitude
   - tde_fit_exp_errors_d_temp
   - tde_fit_exp_errors_plateaustart
-  - tde_fit_exp_paramdict_t0
   - rise
   - decay
   - temp
@@ -404,15 +402,13 @@ train_params_train:
   - distnr
   - crossmatch_sgscore_sgscore
   - simpleclasses
-  - sample
   - salt_chisq
   - salt_ndof
   - salt_paramdict_z
-  - salt_paramdict_t0
   - salt_paramdict_x0
   - salt_paramdict_x1
   - salt_paramdict_c
-  - salt_paramdict_mwebv
+  #- salt_paramdict_mwebv
   - salt_red_chisq
   - wise_w1w2
   - wise_w2w3
