--- a/config.yaml
+++ b/config.yaml
@@ -423,7 +423,9 @@ classify_params:
   - tde_fit_exp_errors_amplitude
   - tde_fit_exp_errors_d_temp
   - tde_fit_exp_errors_plateaustart
+  - crossmatch_Milliquas_type
   - rise
+  - z
   - decay
   - temp
   - tde_fit_exp_paramdict_amplitude
