--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ pandas-stubs = "^1.5.3.230214"
 sklearn-stub = "^0.0.3"
 joblib = "^1.2.0"
 types-pyyaml = "^6.0.12.7"
+astroquery = "^0.4.6"
 
 [tool.poetry.dev-dependencies]
 coveralls = "^3.3.1"
